# SmartOrderManager

./: README.md
SmartOrderManager/: CMakeLists.txt  admin.cpp  admin.h  admin_interface.cpp  admin_interface.h  admin_interface.ui  chauffeur.cpp  chauffeur.h  chauffeur_interface.cpp  chauffeur_interface.h  chauffeur_interface.ui  colis.cpp  colis.h  dispatcher.cpp  dispatcher.h  dispatcher_interface.cpp  dispatcher_interface.h  dispatcher_interface.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  personne.cpp  personne.h  trajet.cpp  trajet.h
